@@ -1,35 +1,35 @@
 package pl.pilionerzy.controller;
 
-import com.google.common.collect.ImmutableMap;
 import org.hamcrest.Matchers;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.dao.DataAccessException;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import pl.pilionerzy.dto.NewQuestionDto;
 import pl.pilionerzy.exception.GameException;
 import pl.pilionerzy.exception.LifelineException;
 import pl.pilionerzy.exception.NoSuchGameException;
+import pl.pilionerzy.model.Lifeline;
 import pl.pilionerzy.model.Prefix;
 
 import javax.validation.ConstraintViolationException;
+import java.util.Map;
 
-import static org.mockito.Answers.RETURNS_SMART_NULLS;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static pl.pilionerzy.model.Lifeline.ASK_THE_AUDIENCE;
 
-@RunWith(SpringRunner.class)
-@WebMvcTest(controllers = ExceptionHandler.class)
-public class ExceptionHandlerTest {
+@ExtendWith(SpringExtension.class)
+@WebMvcTest(controllers = MainExceptionHandler.class)
+class MainExceptionHandlerTest {
 
     @Autowired
     private MockMvc mvc;
@@ -41,8 +41,8 @@ public class ExceptionHandlerTest {
     private QuestionController questionController;
 
     @Test
-    public void shouldHandleConstraintViolation() throws Exception {
-        ConstraintViolationException exception = mock(ConstraintViolationException.class, RETURNS_SMART_NULLS);
+    void shouldHandleConstraintViolation() throws Exception {
+        var exception = mock(ConstraintViolationException.class);
         when(questionController.add(isA(NewQuestionDto.class))).thenThrow(exception);
 
         mvc.perform(post("/questions")
@@ -61,7 +61,7 @@ public class ExceptionHandlerTest {
     }
 
     @Test
-    public void shouldHandleMethodArgumentInvalid() throws Exception {
+    void shouldHandleMethodArgumentInvalid() throws Exception {
         mvc.perform(post("/questions")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{}"))
@@ -70,7 +70,7 @@ public class ExceptionHandlerTest {
     }
 
     @Test
-    public void shouldHandleDataAccessException() throws Exception {
+    void shouldHandleDataAccessException() throws Exception {
         when(gameController.createNewGame()).thenThrow(mock(DataAccessException.class));
 
         mvc.perform(get("/games/start-new"))
@@ -79,33 +79,33 @@ public class ExceptionHandlerTest {
     }
 
     @Test
-    public void shouldHandleGameException() throws Exception {
+    void shouldHandleGameException() throws Exception {
         when(gameController.sendAnswer(anyLong(), anyMap())).thenThrow(GameException.class);
 
         mvc.perform(post("/games/1/answers")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"selected\":\"A\"}"))
                 .andExpect(status().isBadRequest());
-        verify(gameController).sendAnswer(1L, ImmutableMap.of("selected", Prefix.A));
+        verify(gameController).sendAnswer(1L, Map.of("selected", Prefix.A));
     }
 
     @Test
-    public void shouldHandleLifelineException() throws Exception {
-        when(gameController.getAudienceAnswer(anyLong())).thenThrow(LifelineException.class);
+    void shouldHandleLifelineException() throws Exception {
+        when(gameController.getLifelineResult(anyLong(), isA(Lifeline.class))).thenThrow(LifelineException.class);
 
         mvc.perform(get("/games/1/ask-the-audience"))
                 .andExpect(status().isForbidden());
-        verify(gameController).getAudienceAnswer(1L);
+        verify(gameController).getLifelineResult(1L, ASK_THE_AUDIENCE);
     }
 
     @Test
-    public void shouldHandleNoSuchGameException() throws Exception {
+    void shouldHandleNoSuchGameException() throws Exception {
         when(gameController.sendAnswer(anyLong(), anyMap())).thenThrow(NoSuchGameException.class);
 
         mvc.perform(post("/games/1/answers")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"selected\":\"A\"}"))
                 .andExpect(status().isNotFound());
-        verify(gameController).sendAnswer(1L, ImmutableMap.of("selected", Prefix.A));
+        verify(gameController).sendAnswer(1L, Map.of("selected", Prefix.A));
     }
 }
